config/deploy/environments/production/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  template:
    spec:
      containers:
        - name: web
          volumeMounts:
            - name: rails-sitemaps
              mountPath: /rails/public/sitemaps
      volumes:
        - name: rails-sitemaps
          persistentVolumeClaim:
            claimName: rails-sitemaps-claim
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/app: rubyapi
              app.kubernetes.io/process: web
