config/deploy/environments/production/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rubyapi-web-rails
  labels:
    app.kubernetes.io/app: rubyapi
    app.kubernetes.io/process: web
spec:
  type: NodePort
  selector:
    app.kubernetes.io/app: rubyapi
    app.kubernetes.io/process: web
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
